--- a/templates/jobs/pre-install.yaml
+++ b/templates/jobs/pre-install.yaml
@@ -120,9 +120,10 @@ spec:
         - configMapRef:
             name: docspace
       {{- end }}
+      {{- if .Values.install.job.initContainers.identityMigration.enabled }}
       - name: identity-migration
-        image: onlyoffice/4testing-docspace-identity-migration:latest
-        imagePullPolicy: {{ .Values.install.job.initContainers.migrationRunner.image.pullPolicy }}
+        image: {{ include "docspace.imageRepository" (list . .Values.install.job.initContainers.identityMigration.image.repository) }}:{{ default .Values.images.tag .Values.install.job.initContainers.identityMigration.image.tag }}
+        imagePullPolicy: {{ .Values.install.job.initContainers.identityMigration.image.pullPolicy }}
         {{- if or .Values.containerSecurityContext.enabled .Values.install.job.containerSecurityContext.enabled }}
         {{- $icmrsc := dict }}
         {{- if .Values.install.job.containerSecurityContext.enabled }}
@@ -132,7 +133,7 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $icmrsc | nindent 10 }}
         {{- end }}
-        resources: {{- toYaml .Values.install.job.initContainers.migrationRunner.resources | nindent 10 }}
+        resources: {{- toYaml .Values.install.job.initContainers.identityMigration.resources | nindent 10 }}
         env:
         - name: JDBC_PASSWORD
           valueFrom:
@@ -144,7 +145,6 @@ spec:
         - name: SPRING_PROFILES_ACTIVE
           value: dev
         - name: JDBC_USER_NAME
-          # value: onlyoffice_user
           value: root
         - name: JDBC_DATABASE
           value: {{ .Values.connections.mysqlDatabase }}
@@ -155,6 +155,7 @@ spec:
         envFrom:
         - configMapRef:
             name: docspace
+      {{- end }}
       containers:
       - name: app-init-storage
         image: {{ include "docspace.imageRepository" (list . .Values.initContainers.initStorage.image.repository) }}:{{ default .Values.images.tag .Values.initContainers.initStorage.image.tag }}
