--- a/templates/applications/identity-api.yaml
+++ b/templates/applications/identity-api.yaml
@@ -2,10 +2,10 @@
 apiVersion: apps/v1
 kind: {{ .Values.identityApi.kind }}
 metadata:
-  name: identityApi
+  name: identity-api
   namespace: {{ include "docspace.namespace" . | quote }}
   labels:
-    app: identityApi
+    app: identity-api
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
@@ -17,12 +17,12 @@ spec:
   replicas: {{ .Values.identityApi.replicaCount }}
   selector:
     matchLabels:
-      app: identityApi
+      app: identity-api
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
   {{- if eq .Values.identityApi.kind "StatefulSet" }}
-  serviceName: identityApi
+  serviceName: identity-api
   {{- end }}
   {{- if .Values.identityApi.updateStrategy }}
   {{- if eq .Values.identityApi.kind "Deployment" }}
@@ -37,7 +37,7 @@ spec:
   template:
     metadata:
       labels:
-        app: identityApi
+        app: identity-api
         {{- if .Values.commonLabels }}
         {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
@@ -66,7 +66,7 @@ spec:
                 - key: app
                   operator: In
                   values:
-                  - identityApi
+                  - identity-api
               topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
             weight: {{ .Values.podAntiAffinity.weight }}
           {{- else if eq .Values.podAntiAffinity.type "required" }}
@@ -76,7 +76,7 @@ spec:
               - key: app
                 operator: In
                 values:
-                - identityApi
+                - identity-api
             topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
           {{- end }}
           {{- with .Values.identityApi.customPodAntiAffinity }}
@@ -101,8 +101,10 @@ spec:
       - name: {{ .Values.imagePullSecrets }}
       {{- end }}
       containers:
-      - name: identityApi
+      - name: identity-api
         image: {{ include "docspace.imageRepository" (list . .Values.identityApi.image.repository) }}:{{ default .Values.images.tag .Values.identityApi.image.tag }}
+        # command: ["sh"]
+        # args: ["-c", "sleep"]
         imagePullPolicy: {{ .Values.identityApi.image.pullPolicy }}
         {{- if or .Values.containerSecurityContext.enabled .Values.identityApi.containerSecurityContext.enabled }}
         {{- $csc := dict }}
@@ -117,8 +119,8 @@ spec:
         lifecycle: {{- toYaml .Values.identityApi.lifecycleHooks | nindent 10 }}
         {{- end }}
         ports:
-        - containerPort: {{ .Values.identityApi.containerPorts.identityApi }}
-          name: identityApi
+        - containerPort: {{ .Values.identityApi.containerPorts.app }}
+          name: app
         {{- if .Values.identityApi.startupProbe.enabled }}
         startupProbe: {{- omit .Values.identityApi.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
@@ -131,9 +133,9 @@ spec:
         resources: {{- toYaml .Values.identityApi.resources | nindent 10 }}
         env:
         - name: SPRING_APPLICATION_NAME
-          value: ASC.Identity.Registration
+          value:  {{ .Values.identityApi.springApplicationName }}
         - name: SERVER_PORT
-          value: {{ .Values.identityApi.containerPorts.identityApi }}
+          value: {{ .Values.identityApi.containerPorts.app | quote }}
         - name: JDBC_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -149,19 +151,7 @@ spec:
             secretKeyRef:
               name: rabbitmq
               key: rabbitmq-password
-        - name: JDBC_URL
-          value: mysql
-        - name: SPRING_PROFILES_ACTIVE
-          value: dev
-        - name: JDBC_USER_NAME
-          value: root
-        - name: JDBC_DATABASE
-          value: {{ .Values.connections.mysqlDatabase }}
-        - name: RABBIT_HOST
-          value: {{ .Values.connections.brokerHost }}
-        - name: REDIS_HOST
-          value: {{ .Values.connections.redisHost }}  
         envFrom:
         - configMapRef:
-            name: docspace
+            name: identity
 {{- end }}
